Updated report template and set up batch processing

--- a/Report_Template.Rnw
+++ b/Report_Template.Rnw
@@ -1,19 +1,10 @@
 %
-<<import data>>=
-source("main.R")
-
-# usally the i value will be specified by the makefile
-# but if it is not, make i = 1 
-if(!any(ls() %in% "i")) i <- 1
-
-id <- ipip$id[i] # specify the active ID
-@
- \documentclass[a4paper]{article}
+\documentclass[a4paper]{article}
 \usepackage[OT1]{fontenc}
 \usepackage{Sweave}
 \usepackage{chngpage} % allows use of adjust width
 \SweaveOpts{echo=FALSE}
-\setkeys{Gin}{width=0.8\textwidth}
+\setkeys{Gin}{width=1.0\textwidth}
 \usepackage{hyperref}            % for links (only use on final printed version
 \usepackage{booktabs}
 \usepackage[left=40mm, right=40mm, top=30mm, bottom=30mm, includefoot, headheight=13.6pt]{geometry} %set margins to be 30mm (needs to include page numbers
@@ -27,35 +18,56 @@ id <- ipip$id[i] # specify the active ID
 } % have links but print liek standard text http://en.wikibooks.org/wiki/LaTeX/Hyperlinks
 
 \begin{document}
-\title{Sweave Example: Example Personality Test Report;
+\title{Sweave Example: Personality Test Report;
  ID = \Sexpr{id}}
 \author{Author: Jeromy Anglim}
 
 \maketitle
+\begin{abstract}
+This PDF is a simple proof of concept example of 
+using Sweave to generate  
+an individualised report based on responses to a personality test.
+The source code enables use of a batch command to generate a 
+report for each individual in a data.frame. 
+Copies and explanation of the source code used to generate 
+ the test can be found found at
+ \url{http://jeromyanglim.blogspot.com/}.
+Item are drawn from a 50 item version of the IPIP:
+\url{http://ipip.ori.org/}
+The norm group is a convenience sample of \Sexpr{nrow(ipip)}
+students at an Australian university.   
+\end{abstract}
 
+\begin{figure}
 <<plot_scale_distributions, fig=true>>=
-#plotScale <- function(ipipscale) {
-#	ggplot(ipip, aes_string(x=ipipscale["scale"])) + 
-#		scale_x_continuous(limits=c(1, 5),
-#			name = ipipscale["name"]) +
-#		scale_y_continuous(name = "", labels ="",	breaks = 0) +
-#		geom_density(fill="green", alpha = .5) +
-#		geom_vline(xintercept = ipip[ipip$id %in% id, ipipscale["scale"]],
-#				size=1) 
-#
-#}
-#
-#scaleplots <-	apply(ipipscales, 1, function(X) plotScale(X))
-#
-#arrange(scaleplots[[1]], 
-#		scaleplots[[2]],
-#		scaleplots[[3]],
-#		scaleplots[[4]],
-#		scaleplots[[5]],
-#		ncol=3)
+plotScale <- function(ipipscale) {
+	ggplot(ipip, aes_string(x=ipipscale["scale"])) + 
+		scale_x_continuous(limits=c(1, 5),
+			name = ipipscale["name"]) +
+		scale_y_continuous(name = "", labels ="",	breaks = 0) +
+		geom_density(fill="green", alpha = .5) +
+		geom_vline(xintercept = ipip[ipip$id %in% id, ipipscale["scale"]],
+				size=1) 
+}
+
+
+scaleplots <-	apply(ipipscales, 1, function(X) plotScale(X))
+
+arrange(scaleplots[[1]], 
+		scaleplots[[2]],
+		scaleplots[[3]],
+		scaleplots[[4]],
+		scaleplots[[5]],
+		ncol=3)
 @
-Figure of distribution of scores on each scale.
-Black vertical line indicates your score.
+\caption{Figures show distributions of scores of each personality factor
+in the norm sample.
+Higher scores mean greater levels of the factor. 
+The black vertical line indicates your score.}
+\end{figure}
+
+
+
 
 <<prepare_table>>=
 ipiptable <- list()
@@ -86,11 +98,12 @@ ipiptable$tex1 <- ipiptable$tex[c(1:34)]
 ipiptable$tex2 <- ipiptable$tex[c(1,35:56)]
 @
 
+
+
 \begin{table}
 \begin{adjustwidth}{-1cm}{-1cm}
-Table of results for (A)greeableness, (C)onscientiousness
+\caption{Table of results for (A)greeableness, (C)onscientiousness
 and (E)motional (S)tability items.
-
 Response options were 
 1 = (V)ery (I)naccurate, 
 2 = (M)oderately (I)naccurate,
@@ -100,8 +113,7 @@ Response options were
 Thus, VI\% indicates the percentage of the norm sample 
 giving a response indicating that the item is a Very Inaccurate
 description of themselves.
-
-Response indicates your response to the questionnaire. 
+Response indicates your response to the questionnaire.} 
 
 \begin{center}
 \begin{tabular}{rrp{4cm}rrrrrrrr}
@@ -117,6 +129,17 @@ cat(ipiptable$tex1, sep="\n")
 
 \begin{table}
 \begin{adjustwidth}{-1cm}{-1cm}
+\caption{Table of results for (EX)traversion and (I)ntellectance items.
+Response options were 
+1 = (V)ery (I)naccurate, 
+2 = (M)oderately (I)naccurate,
+3 = (N)either Inaccurate nor Accurate, 
+4 = (M)oderately (A)ccurate
+5 = (V)ery (A)ccurate.
+Thus, VI\% indicates the percentage of the norm sample 
+giving a response indicating that the item is a Very Inaccurate
+description of themselves.
+The response column indicates the response you gave in the questionnaire.}
 \begin{center}
 \begin{tabular}{rrp{4cm}rrrrrrrr}
 \toprule
